modified a route to retrieve club_formations
-alos added elements in the single page
